# linux_thermal_zone_bringup

./: CMakeLists.txt  README.md  package.xml
launch/: launch.py  linux_thermal_zone.launch.py  linux_thermal_zone_base.launch.py  ltz_base.launch.py
params/: ltz_base.params.yaml
