<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>linux_thermal_zone_bringup</name>
  <version>0.0.0</version>
  <description>ROS2 launch scripts to bring up Linux Thermal Zone</description>
  <maintainer email="nat11public@gmail.com">Nathanael Gandhi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>linux_thermal_zone</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
